@@ -6,6 +6,7 @@ Build 2.1.0
 		* If you want work using lazy loading with Castle.DynamicProxy2 now you must deploy NHibernate.ByteCode.Castle.dll
 		* If you want work using lazy loading with Spring.Aop now you must deploy NHibernate.ByteCode.Spring.dll
 		* compatible only with .NET2.0 SP1 or above (System.DateTimeOffset)
+		* In SchemaExport.Execute the parameter "format" was removed; (NH-1701) enabled configuration property format_sql (default true)
 
 	##### Possible Breaking Changes for external frameworks #####
 		* ISession interface has additional methods
